# river_forecasting

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: __init__.py  config.py  end_point.py  main.py  requirements.txt
api/schemas/: __init__.py  predict.py
app/: demo.py
river_forecasting/: __init__.py  data.py  features.py  hp_opt.py  model_manager.py  models.py  predict.py  processing.py  train_models.py  utility.py  validation.py
scripts/: explore_data.py  first_order_transfer_function.py  investigate_trained.py  multi_forecasts.py  quantile_reg_test.py
